crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__enum_both_booleans.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"enum\":[true,false]}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Bool(_) => true,
            _ => false,
        }
