crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__enum_false.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"enum\":[false]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Bool(b) => !*b,
            _ => false,
        }
