crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__enum_integer_not_redundant.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"enum\":[1.5],\"type\":\"integer\"}"
expression: is_valid_body(schema)
---
(match instance {
            __Value::Number(n) => __types::is_integer(n),
            _ => false,
        })
            && (match instance {
                __Value::Number(_) => {
                    static NUMBER_VARIANTS: __Lazy<Vec<__sj::Value>> = __Lazy::new(|| {
                        __sj::from_str::<Vec<__sj::Value>>("[1.5]")
                            .expect("Failed to parse number variants")
                    });
                    NUMBER_VARIANTS.iter().any(|variant| __cmp::equal(variant, instance))
                }
                _ => false,
            })
