crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__enum_objects.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"enum\":[{\"a\":1},{\"b\":2}]}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(_) => {
                static COMPLEX_VARIANTS: __Lazy<Vec<serde_json::Value>> = __Lazy::new(|| {
                    serde_json::from_str::<
                        Vec<serde_json::Value>,
                    >("[{\"a\":1},{\"b\":2}]")
                        .expect("Failed to parse complex variants")
                });
                COMPLEX_VARIANTS
                    .iter()
                    .any(|variant| jsonschema::__private::cmp::equal(variant, instance))
            }
            _ => false,
        }
