crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__enum_objects_only.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"enum\":[{\"a\":1},{\"b\":2}]}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(_) => {
                static COMPLEX_VARIANTS: __Lazy<Vec<__sj::Value>> = __Lazy::new(|| {
                    __sj::from_str::<Vec<__sj::Value>>("[{\"a\":1},{\"b\":2}]")
                        .expect("Failed to parse complex variants")
                });
                COMPLEX_VARIANTS.iter().any(|variant| __cmp::equal(variant, instance))
            }
            _ => false,
        }
