crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__enum_str_with_type.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"enum\":[\"Point\",\"Feature\"],\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => matches!(s.as_str(), "Point" | "Feature"),
            _ => false,
        }
