crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__enum_true.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"enum\":[true]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Bool(b) => *b,
            _ => false,
        }
