crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__exclusive_maximum.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"exclusiveMaximum\":100,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __num::lt(n, 100u64),
            _ => false,
        }
