crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__exclusive_minimum.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"exclusiveMinimum\":0,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __num::gt(n, 0u64),
            _ => false,
        }
