crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__if_then_else.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"if\":{\"type\":\"string\"},\"then\":{\"minLength\":1}}"
expression: is_valid_body(schema)
---
if instance.is_string() {
            match instance {
                __Value::String(s) => !s.is_empty(),
                _ => true,
            }
        } else {
            true
        }
